--- a/templates/index.html
+++ b/templates/index.html
@@ -34,12 +34,32 @@
                 </div>
             </div>
         </div>
+        <br>
+    <div class="container">
         <div class="row">
             <h1>Mars Hemispheres</h1>
             <br>
-            <div class="col">
-                <img src="{{ mars.hemisphere_list[0]['img_url'] }}" class="img-fluid">
-                <h3>{{ mars.hemisphere_list[0]['title'] }}</h3>
+            <div class="row">
+                <div class="col-6 col-lg-6 border border-black border-rounded">
+                    <img src="{{ mars.hemisphere_list[0]['img_url'] }}" class="img-fluid">
+                    <h3>{{ mars.hemisphere_list[0]['title'] }}</h3>
+                </div>
+                <div class="col-6 col-lg-6 border border-black border-rounded">
+                        <img src="{{ mars.hemisphere_list[1]['img_url'] }}" class="img-fluid">
+                        <h3>{{ mars.hemisphere_list[1]['title'] }}</h3>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-6 col-lg-6 border border-black border-rounded">
+                    <img src="{{ mars.hemisphere_list[3]['img_url'] }}" class="img-fluid">
+                    <h3>{{ mars.hemisphere_list[0]['title'] }}</h3>
+                </div>
+                <div class="col-6 col-lg-6 border border-black border-rounded">
+                        <img src="{{ mars.hemisphere_list[3]['img_url'] }}" class="img-fluid">
+                        <h3>{{ mars.hemisphere_list[3]['title'] }}</h3>
+                </div>
+            </div>
+        </div>
         </div>
         </div>
     </div>
